--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apollo-upload-client": "^14.1.1",
     "babel-cli": "6",
     "babel-preset-react-app": "3",
     "bootstrap": "^4.5.2",
