--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "babel-preset-react-app": "3",
     "bootstrap": "^4.5.2",
     "graphql": "^15.3.0",
+    "hookrouter": "^1.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.3",
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "cross-env PORT=3001 react-scripts start",
+    "start": "cross-env PORT=5000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
